skins: Store images internally as Cairo surfaces.  Use guint32 consistently for colors.  More cleanups.

--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -3,7 +3,7 @@ PLUGIN = skins${PLUGIN_SUFFIX}
 SRCS = drag-handle.c \
        plugin.c \
        skins_cfg.c \
-       dnd.c \
+       surface.c \
        ui_skin.c \
        ui_skinned_window.c \
        ui_dock.c \
