Remove apparently problematic GUI code from adplug plugin; everything else works you know...

--- a/configure.ac
+++ b/configure.ac
@@ -1617,7 +1617,7 @@ dnl GTK3 overrides
 dnl ==============
 
 if test $use_gtk3 = yes ; then
-    for name in adplug alarm aosd evdev-plug jack ladspa lirc modplug moodbar paranormal projectm-1.0 sid spectrum streambrowser
+    for name in alarm aosd evdev-plug jack ladspa lirc moodbar paranormal projectm-1.0 sid spectrum streambrowser
     do
         echo " *** Disabling plugin because not GTK3-compatible: $name"
         CONTAINER_PLUGINS=`sed s/$name// << EOF
