alarm: Not portable to GTK 3 because of Glade-generated code.  Removed.

--- a/configure.ac
+++ b/configure.ac
@@ -128,7 +128,7 @@ dnl These plugins are always built.
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
 EFFECT_PLUGINS="compressor crossfade crystalizer mixdown ladspa sndstretch stereo_plugin voice_removal echo_plugin"
-GENERAL_PLUGINS="alarm albumart"
+GENERAL_PLUGINS="albumart"
 VISUALIZATION_PLUGINS="blur_scope spectrum cairo-spectrum"
 CONTAINER_PLUGINS="m3u pls asx"
 TRANSPORT_PLUGINS="unix-io"
@@ -1622,7 +1622,7 @@ dnl GTK3 overrides
 dnl ==============
 
 if test $use_gtk3 = yes ; then
-    for name in alarm aosd evdev-plug jack ladspa lirc moodbar paranormal projectm-1.0 sid spectrum streambrowser
+    for name in aosd evdev-plug jack ladspa lirc moodbar paranormal projectm-1.0 sid spectrum streambrowser
     do
         echo " *** Disabling plugin because not GTK3-compatible: $name"
         CONTAINER_PLUGINS=`sed s/$name// << EOF
@@ -1768,7 +1768,6 @@ echo "  Metronom:                               yes"
 echo
 echo "  General"
 echo "  -------"
-echo "  Alarm:                                  yes"
 echo "  Song Change:                            $enable_songchange"
 echo "  Status Icon:                            $have_statusicon"
 echo "  Audacious OSD:                          $have_aosd"
