Note that USF is still is experimental stage; otherwise it's not clear why it's disabled.

--- a/configure.ac
+++ b/configure.ac
@@ -1543,7 +1543,7 @@ echo "    -> libSIDPlay2 support:               $xs_have_sidplay2"
 echo "    -> distortion patched libSIDPlay2:    $xs_have_distortion"
 echo "  Game music (spc, nsf & gbs):            $enable_console"
 echo "  PlayStation (psf/psf2) audio:           $enable_psf"
-echo "  Nintendo 64 audio (usf):                $enable_usf"
+echo "  Nintendo 64 audio (usf) (experimental): $enable_usf"
 echo "  Nintendo DS audio (xsf):                $enable_xsf"
 echo "  AdLib synthesizer (adplug):             $have_adplug"
 echo "  WavPack 4.31+ (wavpack):                $have_wavpack"
