--- a/src/jack/Makefile
+++ b/src/jack/Makefile
@@ -10,5 +10,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${SAMPLERATE_CFLAGS} ${PTHREAD_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${JACK_LIBS} ${SAMPLERATE_LIBS} ${PTHREAD_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${PTHREAD_CFLAGS} -I../..
+LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${JACK_LIBS} -lsamplerate ${PTHREAD_LIBS} -lm
