--- a/extra.mk.in
+++ b/extra.mk.in
@@ -229,6 +229,7 @@ OBJEXT ?= @OBJEXT@
 OGG_VORBIS_CFLAGS ?= @OGG_VORBIS_CFLAGS@
 OGG_VORBIS_LIBS ?= @OGG_VORBIS_LIBS@
 OSS_LIBS ?= @OSS_LIBS@
+OSS4_CPPFLAGS ?= @OSS4_CPPFLAGS@
 OUTPUT_PLUGINS ?= @OUTPUT_PLUGINS@
 OUTPUT_PLUGIN_DIR ?= @OUTPUT_PLUGIN_DIR@
 PACKAGE ?= @PACKAGE@
