--- a/src/oss4/Makefile
+++ b/src/oss4/Makefile
@@ -11,5 +11,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} -I/usr/lib/oss/include -I../.. ${GTK_CFLAGS} ${GLIB_CFLAGS}
-LIBS += ${OSS_LIBS} ${GTK_LIBS} ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${OSS4_CPPFLAGS} -I../.. ${GTK_CFLAGS} ${GLIB_CFLAGS}
+LIBS += ${GTK_LIBS} ${GLIB_LIBS}
