mpg123: id3skip.c is no longer used.

--- a/src/mpg123/Makefile
+++ b/src/mpg123/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = madplug${PLUGIN_SUFFIX}
 
-SRCS = mpg123.c \
-       id3skip.c
+SRCS = mpg123.c
 
 include ../../buildsys.mk
 include ../../extra.mk
