Update .po files.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -75,6 +75,7 @@ src/lyricwiki/lyricwiki.c
 src/metronom/metronom.c
 src/mpg123/mpg123.c
 src/mtp_up/mtp.c
+src/notify/libnotify-aosd_event.c
 src/null/null.c
 src/oss4/configure.c
 src/oss4/plugin.c
