Add alarm to buildsys.

--- a/configure.ac
+++ b/configure.ac
@@ -128,7 +128,7 @@ dnl These plugins are always built.
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
 EFFECT_PLUGINS="compressor crossfade crystalizer mixdown sndstretch stereo_plugin voice_removal echo_plugin"
-GENERAL_PLUGINS="albumart"
+GENERAL_PLUGINS="alarm albumart"
 VISUALIZATION_PLUGINS="blur_scope cairo-spectrum"
 CONTAINER_PLUGINS="m3u pls asx"
 TRANSPORT_PLUGINS="unix-io"
@@ -1569,6 +1569,7 @@ echo "  Metronom:                               yes"
 echo
 echo "  General"
 echo "  -------"
+echo "  Alarm:                                  yes"
 echo "  Song Change:                            $enable_songchange"
 echo "  Status Icon:                            $have_statusicon"
 echo "  Audacious OSD:                          $have_aosd"
