ladspa: Now a working effect plugin.

--- a/src/ladspa/Makefile
+++ b/src/ladspa/Makefile
@@ -1,6 +1,7 @@
 PLUGIN = ladspa${PLUGIN_SUFFIX}
 
-SRCS = loaded-list.c \
+SRCS = effect.c \
+       loaded-list.c \
        plugin.c \
        plugin-list.c
 
