--- a/configure.ac
+++ b/configure.ac
@@ -127,7 +127,7 @@ dnl These plugins are always built.
 
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
-EFFECT_PLUGINS="compressor crossfade crystalizer mixdown sndstretch stereo_plugin voice_removal echo_plugin"
+EFFECT_PLUGINS="compressor crossfade crystalizer ladspa mixdown sndstretch stereo_plugin voice_removal echo_plugin"
 GENERAL_PLUGINS="alarm albumart"
 VISUALIZATION_PLUGINS="blur_scope cairo-spectrum"
 CONTAINER_PLUGINS="m3u pls asx"
@@ -1588,13 +1588,14 @@ echo "  Album Art widget:                       yes"
 echo
 echo "  Effect"
 echo "  ------"
-echo "  Dynamic Range Compressor:               yes"
-echo "  Voice Removal:                          yes"
-echo "  Extra Stereo:                           yes"
-echo "  Echo/Surround:                          yes"
-echo "  SndStretch:                             yes"
 echo "  Crystalizer:                            yes"
+echo "  Dynamic Range Compressor:               yes"
+echo "  Echo/Surround:                          yes"
+echo "  Extra Stereo:                           yes"
+echo "  LADSPA Host:                            yes"
 echo "  Mixdown:                                yes"
+echo "  SndStretch:                             yes"
+echo "  Voice Removal:                          yes"
 echo "  Bauer stereophonic-to-binaural (bs2b):  $have_bs2b"
 echo "  Sample Rate Converter (resample):       $enable_resample"
 echo
