cairo-spectrum: Fix building.

--- a/src/cairo-spectrum/Makefile
+++ b/src/cairo-spectrum/Makefile
@@ -9,3 +9,4 @@ plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
 CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += -lm
