--- a/src/gtkui/Makefile
+++ b/src/gtkui/Makefile
@@ -17,3 +17,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += -lm
