modplug: Use system libmodplug.  Closes: AUDPLUG-394.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -219,6 +219,8 @@ LTLIBINTL ?= @LTLIBINTL@
 LTLIBOBJS ?= @LTLIBOBJS@
 MAKEINFO ?= @MAKEINFO@
 MKINSTALLDIRS ?= @MKINSTALLDIRS@
+MODPLUG_CFLAGS ?= @MODPLUG_CFLAGS@
+MODPLUG_LIBS ?= @MODPLUG_LIBS@
 MSGFMT ?= @MSGFMT@
 MSGMERGE ?= @MSGMERGE@
 MTP_CFLAGS ?= @MTP_CFLAGS@
